# Async_sorter_DB

./: CMakeLists.txt  connectionpool.cpp  connectionpool.h  db_manager.cpp  db_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationwindow.cpp  registrationwindow.h  registrationwindow.ui  sortworker.cpp  sortworker.h
backup include/: framework.h  pch.h
include/: sort.hpp  sort.inl
include/lib/: My_sort_library.lib
